--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ jobs:
       - uses: actions/checkout@v3
       - run: echo ${{ github.event.client_payload.github }}
       - name: Make changes to pull request
-        run: date +%s > report.txt
+        run: echo ${{ github.event.client_payload.github }} > src/resource.json
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
           commit-message: Update report
           author: Github Actions Bot <github-actions[bot]@users.noreply.github.com>
-          title: "Test"
+          title: "Update i18n resource"
           body: |
             Update report
             - Updated with *today's* date
