--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: echo ${{ github.event.client_payload.github }}
       - name: Make changes to pull request
-        run: echo '${{ github.event.client_payload.github }}' > src/resource.json
+        run: echo '${{ github.event.client_payload.github }}' > src/translation.json
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v4
