--- a/.github/workflows/figma.yml
+++ b/.github/workflows/figma.yml
@@ -12,6 +12,4 @@ jobs:
       - uses: EndBug/add-and-commit@v9
         with:
           add: "src/output.json src/variables.css"
-          author_name: Github Actions Bot
-          author_email: github-actions[bot]@users.noreply.github.com
-          push: false
+          default_author: github_actions
