--- a/.github/workflows/figma.yml
+++ b/.github/workflows/figma.yml
@@ -9,6 +9,9 @@ jobs:
       - uses: actions/setup-node@v3
       - run: npm ci
       - run: npm run generate:style
-      - uses: EndBug/add-and-commit@v9
-        with:
-          default_author: github_actions
+      - run: |
+        git config user.name  "Github Actions Bot"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add .
+        git commit -m "generated"
+        git push
