--- a/.github/workflows/figma.yml
+++ b/.github/workflows/figma.yml
@@ -14,4 +14,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "generated"
-          git push origin $GITHUB_HEAD_REF
+          git push origin HEAD:$GITHUB_HEAD_REF
