--- a/.github/workflows/figma.yml
+++ b/.github/workflows/figma.yml
@@ -14,4 +14,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "generated"
+          git pull
           git push origin HEAD:$GITHUB_HEAD_REF
