--- a/.github/workflows/figma.yml
+++ b/.github/workflows/figma.yml
@@ -14,5 +14,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "generated"
-          git pull
+          git pull origin $GITHUB_HEAD_REF
           git push origin HEAD:$GITHUB_HEAD_REF
