--- a/.github/workflows/figma.yml
+++ b/.github/workflows/figma.yml
@@ -9,10 +9,13 @@ jobs:
       - uses: actions/setup-node@v3
       - run: npm ci
       - run: npm run generate:style
-      - run: |
-          git config user.name  "Github Actions Bot"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "generated"
-          git pull origin $GITHUB_HEAD_REF
-          git push origin HEAD:$GITHUB_HEAD_REF
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update css
+      # - run: |
+      #     git config user.name  "Github Actions Bot"
+      #     git config user.email "github-actions[bot]@users.noreply.github.com"
+      #     git add .
+      #     git commit -m "generated"
+      #     git pull origin $GITHUB_HEAD_REF
+      #     git push origin HEAD:$GITHUB_HEAD_REF
