--- a/.github/workflows/figma.yml
+++ b/.github/workflows/figma.yml
@@ -12,10 +12,6 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update css
-      # - run: |
-      #     git config user.name  "Github Actions Bot"
-      #     git config user.email "github-actions[bot]@users.noreply.github.com"
-      #     git add .
-      #     git commit -m "generated"
-      #     git pull origin $GITHUB_HEAD_REF
-      #     git push origin HEAD:$GITHUB_HEAD_REF
+          commit_user_name: github-actions[bot]
+          commit_user_email: github-actions[bot]@users.noreply.github.com
+          commit_author: Github Actions Bot <github-actions[bot]@users.noreply.github.com>
