--- a/.github/workflows/figma.yml
+++ b/.github/workflows/figma.yml
@@ -3,6 +3,7 @@ on:
     types: [opened]
 jobs:
   update:
+    if: startsWith(github.head_ref, 'figma/')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -11,7 +12,6 @@ jobs:
       - run: npm run generate:style
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Update css
           commit_user_name: github-actions[bot]
           commit_user_email: github-actions[bot]@users.noreply.github.com
           commit_author: Github Actions Bot <github-actions[bot]@users.noreply.github.com>
