--- a/.github/workflows/schema.yml
+++ b/.github/workflows/schema.yml
@@ -7,14 +7,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+      - run: npm ci
       - name: Make changes to pull request
         run: echo '${{ github.event.client_payload.github }}' > src/schema.gql
-      - run: npm ci
       - run: npm run codegen
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
+          branch: create-pull-request/patch2
           commit-message: Update report
           author: Github Actions Bot <github-actions[bot]@users.noreply.github.com>
           title: "Update schema"
