--- a/.github/workflows/schema.yml
+++ b/.github/workflows/schema.yml
@@ -11,11 +11,12 @@ jobs:
           echo "${{ github.event.client_payload.sha }}"
       - uses: actions/checkout@v3
         with:
-          repository: 'silverbirder/fauna-nextjs-guestbook'
+          repository: "silverbirder/fauna-nextjs-guestbook"
           ref: ${{ github.event.client_payload.ref }}
+          path: "src/"
       - run: |
-          mv fauna-nextjs-guestbook/schema.gql src/schema.gql
-          rm -rf fauna-nextjs-guestbook
+          mv src/fauna-nextjs-guestbook/schema.gql src/schema.gql
+          rm -rf src/fauna-nextjs-guestbook
       - uses: actions/setup-node@v3
       - run: npm ci
       - run: npm run codegen
