--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "generate:style": "token-transformer src/tokens.json src/output.json && style-dictionary build",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml",
+    "e2e": "cucumber-js"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^8.10.0",
     "@graphql-codegen/cli": "2.16.2",
     "@graphql-codegen/client-preset": "1.2.4",
     "style-dictionary": "^3.7.1",
