--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@cucumber/cucumber": "^8.10.0",
     "@graphql-codegen/cli": "2.16.2",
     "@graphql-codegen/client-preset": "1.2.4",
+    "@playwright/test": "^1.29.1",
+    "playwright": "^1.29.1",
     "style-dictionary": "^3.7.1",
     "token-transformer": "^0.0.28",
     "typescript": "^4.9.4"
