--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,8 @@
+# on:
+#   pull_request_target:
+#     types: [opened, synchronize, reopened]
 on:
-  pull_request_target:
-    types: [opened, synchronize, reopened]
+  workflow_call:
 jobs:
   test:
     runs-on: ubuntu-latest
