--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -22,6 +22,7 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
+          token: ${{ secrets.PAT }}
           branch: create-pull-request/schema
           commit-message: Update report
           author: Github Actions Bot <github-actions[bot]@users.noreply.github.com>
